# Spartan

./: Cargo.toml
examples/ecdsa_25519/: keys_25519.rs  main.rs
examples/ecdsa_curve25519/: keys_25519.rs  main.rs
examples/ecdsa_p256/: keys_p256.rs  main.rs
src/: commitments.rs  curve25519.rs  curveP256.rs  errors.rs  lib.rs  r1cs.rs  sonny.rs  traits.rs
src/bellperson/: r1cs.rs  solver.rs
src/gadgets/: ecc.rs  ecc_twist.rs  mod.rs  nonnative.rs  r1cs.rs
