[package]
name = "spartan"
version = "0.4.1"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2018"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
bellperson = { version = "0.20", default-features = false }
curve25519-dalek = {version = "3.2.0", features = ["serde", "simd_backend"]}
p256 = { version = "0.10.1", default-features = false, features = ["arithmetic", "digest", "hash2curve", "sha256"] }
ff = {version = "0.11.0", features = ["derive"]}
merlin = "3.0.0"
rand = "0.7.3"
rand_latest = { version = "0.8.5", package = "rand" }
digest = "0.8.1"
sha2 = { version = "0.9", default-features = false }
sha3 = "0.8.2"
byteorder = "1.3.4"
rayon = { version = "1.3.0", optional = true }
serde = { version = "1.0.106", features = ["derive"] }
bincode = "1.2.1"
subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.5", default-features = false }
rand_core_latest = { package = "rand_core", version = "0.6.3", default-features = false, features = ["getrandom"] }
zeroize = { version = "1", default-features = false }
itertools = "0.10.0"
colored = "2.0.0"
flate2 = "1.0.14"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.1"

[lib]
name = "libspartan"
path = "src/lib.rs"

[[bin]]
name = "snark"
path = "profiler/snark.rs"

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"

[[bench]]
name = "snark"
harness = false

[[bench]]
name = "nizk"
harness = false

[features]
multicore = ["rayon"]
profile = []
